--- a/templates/bases/Parzibot.html
+++ b/templates/bases/Parzibot.html
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="https://bit.ly/3t4htsW" style="color: #000 !important">Add Bot on Server</a>
+                <a class="nav-link" href="{{ link }}" style="color: #000 !important">Add Bot on Server</a>
                 <a class="nav-link" href="https://github.com/merive/Parzibot"
                    style="color: #000 !important">GitHub</a>
                 <a class="nav-link" href="/" style="color: #000 !important">Back</a>
