--- a/templates/bases/MTools.html
+++ b/templates/bases/MTools.html
@@ -13,6 +13,10 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" rel="stylesheet">
 
+    <!--  Google Fonts  -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
     <!-- Set favicon -->
     <link href="{{ url_for('static', filename='mtools.ico') }}" rel="shortcut icon">
 </head>
@@ -52,7 +56,7 @@
     body {
         background-image: linear-gradient(to left, #1A2A33, #0F4B72);
 
-        font-family: "Tahoma";
+        font-family: 'Roboto', sans-serif;
         font-size: 16px;
 
         padding-top: 70px;
